[gd_scene load_steps=4 format=3 uid="uid://d0pf1d3s37udu"]

[ext_resource type="Script" path="res://scenes/UI/HealthBar.gd" id="1_n7ylr"]
[ext_resource type="Texture2D" uid="uid://bbdx55eop31m4" path="res://Assets/Sprites/GUI/2 Bars/HealthBar3.png" id="2_ivb0w"]
[ext_resource type="Texture2D" uid="uid://bkg2uqn3fwydo" path="res://Assets/Sprites/GUI/1 Frames/Frame_59.png" id="3_3kcvb"]

[node name="HealthBar" type="CanvasLayer"]
script = ExtResource("1_n7ylr")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 400.0
offset_bottom = 120.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="UIFrame" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("3_3kcvb")
expand_mode = 1
stretch_mode = 5

[node name="InnerMargin" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/InnerMargin"]
layout_mode = 2

[node name="HealthBarContainer" type="HBoxContainer" parent="MarginContainer/InnerMargin/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/InnerMargin/VBoxContainer/HealthBarContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.901961, 0.8, 0.301961, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 14
text = "HP"
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer/InnerMargin/VBoxContainer/HealthBarContainer"]
custom_minimum_size = Vector2(250, 28)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0
nine_patch_stretch = true
texture_progress = ExtResource("2_ivb0w")

[node name="PlayerInfo" type="HBoxContainer" parent="MarginContainer/InnerMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="DashReadyLabel" type="Label" parent="MarginContainer/InnerMargin/VBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.541176, 0.72549, 0.968627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 12
text = "Dash Ready"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/InnerMargin/VBoxContainer/PlayerInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpecialReadyLabel" type="Label" parent="MarginContainer/InnerMargin/VBoxContainer/PlayerInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.94902, 0.678431, 0.196078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.498039)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 12
text = "Special Ready"
horizontal_alignment = 1 